add shift chart component

--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,18 @@ html, body, #root{
   z-index: 10;
 }
 
+.timeline{
+  height: 30px;
+}
+
+.timeline span{
+  background: #fff;
+}
+
+.timeline hr{
+  margin-top: -13px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
